--- a/playlist-finder/styles.css
+++ b/playlist-finder/styles.css
@@ -53,7 +53,39 @@ p {
   margin-block: 1rem;
 }
 
-img {
-  height: 150px;
-  width: 150px;
+body > header,
+body > main {
+  max-width: 580px;
+  margin: auto;
+}
+
+main > .mainHeader {
+  display: flex;
+}
+
+main > .mainHeader > div > label,
+main > .mainHeader > div > span {
+  display: block;
+}
+
+ul#trackList {
+  padding-inline: 0;
+}
+
+ul#trackList > li {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul#trackList > li > div {
+  display: flex;
+}
+
+ul#trackList > li > div > img {
+  height: 48px;
+  width: 48px;
+}
+
+ul#trackList > li > p {
+  margin-block: 0;
 }
